tests/type-errors/update_type_error.arl
archetype update_type_error

asset my_asset {
  id    : nat;
  oaddr : nat;
}

entry bid() {
  effect {
    my_asset.update(0, {
      oaddr = caller
    })
  }
}
